--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.47.12",
+    "date-fns": "^4.1.0",
+    "next": "14.2.23",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.23"
+    "react-date-picker": "^11.0.0",
+    "react-day-picker": "^9.5.0",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.23"
+    "eslint-config-next": "14.2.23",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
